# lsb_translation_service

./: Dockerfile  docker-compose.yml  main.py  main2.py  pyproject.toml  requirements.txt
src/: detection.py  model.py
