[tool.poetry]
name = "webrtc-opencv"
version = "0.1.0"
description = ""
authors = ["Andres Copeticona <andrescopeticona@outlook.es>"]
readme = "README.md"
packages = [{ include = "webrtc_opencv" }]

[tool.poetry.dependencies]
python = "3.10.13"
tensorflow = "2.11.0"
tensorflow-gpu = "2.11.0"
mediapipe = "^0.10.8"
aiortc = "^1.5.0"
aiohttp = "^3.9.0"
aiohttp-cors = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
